mdapioutput/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CustomerGlobalId__c</fullName>
        <externalId>true</externalId>
        <label>Customer Global Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CustomerProfile_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Profile</label>
        <referenceTo>CustomerProfile__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreferredDealership_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Dealership</label>
        <referenceTo>Dealership__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalaryOrientation__c</fullName>
        <label>Salary Orientation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>185</length>
        <type>Text</type>
    </fields>
	    <fields>
        <fullName>TestX__c</fullName>
        <label>TestX</label>
        <length>185</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <description>Bussines Account</description>
        <label>Business Account</label>
    </recordTypes>
    <listViews>
        <fullName>Person_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Person Accounts</label>
    </listViews>
</CustomObject>